Fixing the Swiper koru styles on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -160,8 +160,9 @@ video{
     }
 
 	.swiper-container{
-		width:100vw;
-		height:100vh;
+		@include fullscreen;
+		// width:100vw;
+		// height:100vh;
 		position:absolute;
 		background-color:$secondary;
 	}
